objects/wktDocument8850__c.object
<CustomObject>
    <description>Work table for generation of 8850&apos;s</description>
    <fields>
        <fullName>CheckBoxFive__c</fullName>
        <label>Check Box Five</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CheckBoxFour__c</fullName>
        <label>Check Box Four</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CheckBoxOne__c</fullName>
        <label>Check Box One</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CheckBoxSix__c</fullName>
        <label>Check Box Six</label>
        <picklist>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CheckBoxThree__c</fullName>
        <label>Check Box Three</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CheckBoxTwo__c</fullName>
        <label>Check Box Two</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CheckboxDVANoFormula__c</fullName>
        <formula>IF(NOT( CheckboxDVAYesBit__c ),&apos;True&apos;,&apos;False&apos;)</formula>
        <label>Checkbox DVA No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckboxDVAYesBit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox DVA Yes Bit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckboxFederalConvictionYesBit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Federal Conviction Yes Bit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckboxFelonNoFormula__c</fullName>
        <formula>IF(NOT(CheckboxFelonYesBit__c),&apos;True&apos;,&apos;False&apos;)</formula>
        <label>Checkbox Felon No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckboxFelonYesBit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Felon Yes Bit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckboxLongTermTANFYesBit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Long Term TANF Yes Bit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckboxLongtermTANFNoFormula__c</fullName>
        <formula>IF(NOT(CheckboxLongTermTANFYesBit__c),&apos;True&apos;,&apos;False&apos;)</formula>
        <label>Checkbox Longterm TANF No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckboxRRCNoFormula__c</fullName>
        <formula>IF( CheckboxRRCYesBit__c ,&apos;False&apos;,&apos;True&apos;)</formula>
        <label>Checkbox RRC No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckboxRRCYesBit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox RRC Yes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckboxSNAPRecipientNoFormula__c</fullName>
        <formula>IF(NOT( CheckboxSNAPRecipientYesBit__c ),&apos;True&apos;,&apos;False&apos;)</formula>
        <label>Checkbox SNAP Recipient No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckboxSNAPRecipientYesBit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox SNAP Recipient Yes Bit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckboxSSIRecipientNoFormula__c</fullName>
        <formula>IF(NOT(CheckboxSSIRecipientYesBit__c),&apos;True&apos;,&apos;False&apos;)</formula>
        <label>Checkbox SSI Recipient No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckboxSSIRecipientYesBit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox SSI Recipient Yes Bit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckboxStateConvictionYesBit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Conviction Yes Bit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckboxTANFNoFormula__c</fullName>
        <formula>IF(NOT(CheckboxTANFYesBit__c),&apos;True&apos;,&apos;False&apos;)</formula>
        <label>Checkbox TANF No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckboxTANFYesBit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox TANF Yes Bit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckboxTTWNoFormula__c</fullName>
        <formula>IF(NOT( CheckboxTTWYesBit__c ),&apos;True&apos;,&apos;False&apos;)</formula>
        <label>Checkbox TTW No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckboxTTWYesBit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox TTW Yes Bit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckboxVRANoFormula__c</fullName>
        <formula>IF(NOT( CheckboxVRAYesBit__c ),&apos;True&apos;,&apos;False&apos;)</formula>
        <label>Checkbox VRA No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckboxVRAYesBit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox VRA Yes Bit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckboxVeteranDisabilityNoFormula__c</fullName>
        <formula>IF(NOT( CheckboxVeteranDisabilityYesBit__c ),&apos;True&apos;,&apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Checkbox Veteran Disability No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckboxVeteranDisabilityYesBit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Veteran Disability Yes Bit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckboxVeteranNoBit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Veteran No Bit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckboxVeteranRecentNoFormula__c</fullName>
        <formula>IF(NOT( CheckboxVeteranRecentYesBit__c ),&apos;True&apos;,&apos;False&apos;)</formula>
        <label>Checkbox Veteran Recent No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckboxVeteranRecentYesBit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Veteran Recent Yes Bit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckboxVeteranSNAPNoFormula__c</fullName>
        <formula>IF(NOT( CheckboxVeteranSNAPYesBit__c ),&apos;True&apos;,&apos;False&apos;)</formula>
        <label>Checkbox Veteran SNAP No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckboxVeteranSNAPYesBit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Veteran SNAP Yes Bit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckboxVeteranUnemployedNoFormula__c</fullName>
        <formula>IF(NOT( CheckboxVeteranUnemployedYesBit__c ),&apos;True&apos;,&apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Checkbox Veteran Unemployed No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckboxVeteranUnemployedYesBit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Veteran Unemployed Yes Bit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckboxVeteranYesBit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Veteran Yes Bit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckboxVeteranYesFormula__c</fullName>
        <formula>IF(CheckboxVeteranYesBit__c, &apos;True&apos;,&apos;False&apos;)</formula>
        <label>Checkbox Veteran Yes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckboxWorkedEmployerBeforeNoBit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Worked Employer Before No Bit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckboxWorkedEmployerBeforeYesBit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Worked Employer Before Yes Bit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CongaSolutionURL__c</fullName>
        <formula>&quot;&amp;Id=&quot; + Id  +
&quot;&amp;templateId=a1DV0000000DUdX&quot; + 
&quot;&amp;DS7=2&quot; + 
&quot;&amp;QMode=1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CongaSolutionURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CongaWorkflowTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate IRS 8850</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateOfConvictionGenerated__c</fullName>
        <label>Date of Conviction Generated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateOfReleaseGenerated__c</fullName>
        <label>Date of Release Generated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EINFormula__c</fullName>
        <formula>EntityStructure__r.FederalTaxId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EIN Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ElectronicSignatureBirthMonth__c</fullName>
        <label>Electronic Signature Birth Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ElectronicSignatureBirthYear__c</fullName>
        <label>Electronic Signature Birth Year</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ElectronicSignatureDateTimeFormula__c</fullName>
        <formula>ElectronicSignatureDateTime__c</formula>
        <label>Electronic Signature Date Time Formula</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ElectronicSignatureDateTime__c</fullName>
        <description>The date and time the employee electronically signed the 8850</description>
        <inlineHelpText>The date and time the employee electronically signed the 8850</inlineHelpText>
        <label>Electronic Signature Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ElectronicSignatureFormula__c</fullName>
        <formula>IF(AND(TEXT( ElectronicSignatureDateTimeFormula__c ) &lt;&gt; &apos;&apos;,TEXT( ElectronicSignatureDateTimeFormula__c ) &lt;&gt; &apos;Z&apos;), &apos;Electronically signed by &apos; +  EmployeeFirstMiddleLastNameFormula__c  + &apos; on &apos; + TEXT(MONTH(DATEVALUE(ElectronicSignatureDateTimeFormula__c ))) + &quot;/&quot; + TEXT(DAY(DATEVALUE(ElectronicSignatureDateTimeFormula__c ))) + &quot;/&quot; + RIGHT(TEXT(YEAR(DATEVALUE(ElectronicSignatureDateTimeFormula__c ))),4),&apos;&apos;)</formula>
        <label>Electronic Signature Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ElectronicSignatureText__c</fullName>
        <description>The electronic signature text</description>
        <inlineHelpText>The electronic signature text</inlineHelpText>
        <label>Electronic Signature Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ElectronicSignatureValidatedBit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the electronic signature was validated by the employee over the phone</description>
        <inlineHelpText>Determines if the electronic signature was validated by the employee over the phone</inlineHelpText>
        <label>Electronic Signature Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmployeeAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Address</label>
        <referenceTo>EmployeeAddress__c</referenceTo>
        <relationshipName>wktDocument8850</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmployeeCityStateZipFormula__c</fullName>
        <formula>EmployeeAddress__r.CityName__c  + &apos;, &apos; +  EmployeeAddress__r.State__r.StateAbbr__c  + &apos; &apos; +  EmployeeAddress__r.ZipCode__c</formula>
        <label>Employee City State Zip Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeCountyFormula__c</fullName>
        <formula>EmployeeAddress__r.County__r.Name</formula>
        <label>Employee County Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeFirstMiddleLastNameFormula__c</fullName>
        <formula>Employee__r.FirstLastNameFormula__c</formula>
        <label>Employee First Middle Last Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeFullAddressFormula__c</fullName>
        <formula>EmployeeAddress__r.StreetAddressText__c + &apos;, &apos; +  EmployeeAddress__r.CityName__c  + &apos;, &apos; +  EmployeeAddress__r.State__r.StateAbbr__c   +  EmployeeAddress__r.ZipCode__c</formula>
        <label>Employee Full Address Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeFullNameFormula__c</fullName>
        <formula>Employee__r.FullNameFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Full Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeNameFormula__c</fullName>
        <formula>Employee__r.Name</formula>
        <label>Employee Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeePhoneNumberFormula__c</fullName>
        <formula>Employee__r.PhoneCode__c</formula>
        <label>Employee Phone Number Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeStartDateFormula__c</fullName>
        <formula>Employment__r.StartDate__c</formula>
        <label>Employee Start Date Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmployeeStateAbbrFormula__c</fullName>
        <formula>EmployeeAddress__r.State__r.StateAbbr__c</formula>
        <label>Employee State Abbr Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeStreetAddressFormula__c</fullName>
        <formula>EmployeeAddress__r.StreetAddressText__c</formula>
        <label>Employee Street Address Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeSurvey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Survey</label>
        <referenceTo>EmployeeSurvey__c</referenceTo>
        <relationshipName>wktDocument8850</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Employee record</description>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipName>wktDocument8850</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmployerCityStateZipFormula__c</fullName>
        <formula>Location__r.CityName__c  + &apos;, &apos; +  Location__r.State__r.StateAbbr__c + &apos; &apos; +  Location__r.ZipCode__c</formula>
        <label>Employer&apos;s City State Zip Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployerNameFormula__c</fullName>
        <formula>Employment__r.Entity__r.Name</formula>
        <label>Employer&apos;s Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployerPhoneFormula__c</fullName>
        <formula>Location__r.PhoneCode__c</formula>
        <label>Employer&apos;s Phone Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployerStreetAddressFormula__c</fullName>
        <formula>Location__r.StreetAddressText__c</formula>
        <label>Employer&apos;s Street Address Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmploymentStartDateFormula__c</fullName>
        <formula>Employment__r.StartDate__c</formula>
        <label>Employment Start Date Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employment Period</label>
        <referenceTo>Employment__c</referenceTo>
        <relationshipName>wktDocument8850</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EntityStructure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity Structure</label>
        <referenceTo>EntityStructure__c</referenceTo>
        <relationshipLabel>IRS Forms 8850</relationshipLabel>
        <relationshipName>IRSForms8850</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FormattedSSNFormula__c</fullName>
        <formula>Employee__r.FormattedFullSSNFormula__c</formula>
        <label>Formatted SSN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HourlyWageAmountGenerated__c</fullName>
        <defaultValue>9.00</defaultValue>
        <label>Hourly Wage Amount Generated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastDateOfEmploymentGenerated__c</fullName>
        <label>Last Date of Employment Generated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>IRS Forms 8850</relationshipLabel>
        <relationshipName>IRSForms8850</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Over16Under40Bit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Over 16 Under 40 Bit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Over16Under40NoFormula__c</fullName>
        <formula>IF(NOT(Over16Under40Bit__c),&apos;True&apos;,&apos;False&apos;)</formula>
        <label>Over 16 Under 40 No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverSixteenUnderFortyBirthdayFormula__c</fullName>
        <formula>IF(Over16Under40Bit__c == true, TEXT(MONTH(Employee__r.BirthDate__c)) + &quot;/&quot; + TEXT(DAY(Employee__r.BirthDate__c)) + &quot;/&quot; + RIGHT(TEXT(YEAR(Employee__r.BirthDate__c)),4),&apos;&apos;)</formula>
        <label>Over 16 Under 40 Birthday Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PositionGenerated__c</fullName>
        <defaultValue>&apos;Staff&apos;</defaultValue>
        <label>Position Generated</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RRCCountyFormula__c</fullName>
        <formula>IF( CheckboxRRCYesBit__c , EmployeeCountyFormula__c ,&apos;&apos;)</formula>
        <label>RRC County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResdentialTargetedGroupCategory__c</fullName>
        <label>Resdential Targeted Group Category</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNAPCityStateGenerated__c</fullName>
        <label>SNAP City State Generated</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNAPPrimaryRecipientNameGenerated__c</fullName>
        <label>SNAP Primary Recipient Name Generated</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSNFirstThreeFormula__c</fullName>
        <formula>LEFT(Employee__r.SSN__c ,3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSN First Three Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSNLastFourFormula__c</fullName>
        <formula>RIGHT(Employee__r.SSN__c,4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSN Last Four</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSNMiddleTwoFormula__c</fullName>
        <formula>MID(Employee__r.SSN__c, 4,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSN Middle Two</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyDateTimeFormula__c</fullName>
        <formula>TEXT(MONTH(DATEVALUE(EmployeeSurvey__r.SurveyDate__c))) + &quot;/&quot; + TEXT(DAY(DATEVALUE(EmployeeSurvey__r.SurveyDate__c))) + &quot;/&quot; + RIGHT(TEXT(YEAR(DATEVALUE(EmployeeSurvey__r.SurveyDate__c))),4)</formula>
        <label>Survey Date Time Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TANFCityStateGenerated__c</fullName>
        <label>TANF City State Generated</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TANFPrimaryRecipientNameGenerated__c</fullName>
        <label>TANF Primary Recipient Name Generated</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VeteranSNAPCityStateGenerated__c</fullName>
        <label>Veteran SNAP City State Generated</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VeteranSNAPPrimaryRecipientNameGenerated__c</fullName>
        <label>Veteran SNAP Primary Recipient Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wktDocument8850EID__c</fullName>
        <externalId>true</externalId>
        <label>IRS Form 8850 EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>IRS Form 8850</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employee__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>IRS Form 8850 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IRS Forms 8850</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>